crates/aura-macros/tests/boundaries/legacy_guard_capability_name.stderr
error: Invalid annotation value: invalid guard_capability `send_message`: choreography guard capabilities must be canonical namespaced values, got `send_message`
 --> tests/boundaries/legacy_guard_capability_name.rs:3:1
  |
3 | / choreography!(r#"
4 | | module legacy_guard_capability_name exposing (LegacyGuardCapabilityName)
5 | |
6 | | protocol LegacyGuardCapabilityName =
7 | |   roles Alice, Bob
8 | |   Alice[guard_capability = "send_message"] -> Bob : Message
9 | | "#);
  | |___^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
